Fix contrast in table

--- a/src/components/SearchResultItem/SearchResultItem.css
+++ b/src/components/SearchResultItem/SearchResultItem.css
@@ -1,3 +1,7 @@
 h6 {
   font-weight: 300;
 }
+
+.post-content {
+  color:#727272;
+}
